<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:text="@string/wins"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="1"
                android:text="@string/loss"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:text="@string/total"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/win_text"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loss_text"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_row="1"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_text"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:text="0"
                android:textSize="20sp"
                android:textStyle="bold" />

        </GridLayout>

        <TextView
            android:id="@+id/prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/choose_door"
            android:textSize="30sp"
            android:textStyle="bold" />

        <include
            layout="@layout/doors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/again"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:alpha="12"
            android:padding="10sp"
            android:text="@string/play_again"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>